2008-08-05  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #6992: t3ib_refindex requires t3lib_BEfunc but does not include it

2008-08-01  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9099: Wrong path to pages.gif in linkbrowser (Thanks to Xander Damen)

2008-07-31  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #2661: stdWrap filelist doesn't work directly in fileadmin/

2008-07-30  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8948: phpDoc @internal hides public functions of t3lib_div in Eclipse
	* Fixed bug #9076: iso-ir-109 detected as iso-8859-2 instead of iso-8859-3
	* Fixed bug #5387: Creation of multiple folders in filelist module results in blank page (thanx to Christian Kuhn and Christopher Hlubek)

2008-07-25  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9027: CSH was obsolete at the page-bottom in Web->Info (Thanks to Stefano Kowalke)

2008-07-23  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed LICENSE.txt to reference GPL "version 2 or later"

2008-07-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8913: Empty tabs in DynTabMenu should not be selectable by default

2008-07-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8566: Unable to match TS condition when variable is not set

2008-07-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8697: Warnings when using MySql 4.0

2008-07-13  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #5476: links entered in <th>-tag with the RTE are not parsed on the frontend because parseFunc doesn't recognize <th> as cells (thanks to Daniel Ellermann)

2008-07-12  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8864: Make TS config.absRefPrefix work with a changed location of fileadmin/. (fix by Bejamin Mack)
	* Fixed bug #8833: TCA "check" type field checkboxes have no labels when in 1-column display (thanks to Francois Suter)
	* Fixed bug #8922: setStage operation of t3lib_TCAmain::process_cmdmap() overwrites $id parameter making it inaccessible for post-processing hooks
