@@ -1,6 +1,7 @@
 2008-08-05  Dmitry Dulepov  <dmitry@typo3.org>
 
     * Fixed bug #6992: t3ib_refindex requires t3lib_BEfunc but does not include it
+	* Fixed bug #8255: Problems with PHP mail function on Windows
 
 2008-08-01  Benjamin Mack  <benni@typo3.org>
 
